Fix color square entity on contrast tests

--- a/stylesheets/tests/_color-contrast.scss
+++ b/stylesheets/tests/_color-contrast.scss
@@ -17,7 +17,7 @@
 
 			text-align: left;
 
-			content: '\23f9\a0' + quote(#{text-contrast($b, $f)});
+			content: '\25a0\a0' + quote(#{text-contrast($b, $f)});
 		}
 	}
 }
